--- a/index.html
+++ b/index.html
@@ -7,52 +7,59 @@
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 <!-- Header -->
-    <header>
-        <nav class="navigation">
-            <a class="logo link" href="./index.html" ><span class="logo-accent">Web</span>Studio</a>
-            <ul class="navigation-list list">
-                <li><a class="navigation-list-link link current" href="./index.html" >Студия</a></li>
-                <li><a class="navigation-list-link link" href="./portfolio.html" >Портфолио</a></li>
-                <li><a class="navigation-list-link link" href="#" >Контакты</a></li>
+    <header class="page-header">
+        <div class="container">
+            <nav class="navigation">
+                <a class="logo link" href="./index.html" ><span class="logo-accent">Web</span>Studio</a>
+                <ul class="navigation-list list">
+                    <li class="item"><a class="navigation-list-link link current" href="./index.html" >Студия</a></li>
+                    <li class="item"><a class="navigation-list-link link" href="./portfolio.html" >Портфолио</a></li>
+                    <li class="item"><a class="navigation-list-link link" href="#" >Контакты</a></li>
+                </ul>
+                
+            </nav>
+            <ul class="contacts-list list">
+                <li class="item"><a class="contacts-list-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
+                <li class="item"><a class="contacts-list-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
             </ul>
-            
-        </nav>
-        <ul class="contacts-list list">
-            <li><a class="contacts-list-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
-            <li><a class="contacts-list-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main>
 <!--Hero-->
     <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button" type="button" >Заказать услугу</button>
+        <div>
+            <h1 class="hero-title">Эффективные решения <br/> для вашего бизнеса</h1>
+            <button class="hero-button" type="button" >Заказать услугу</button>
+        </div>
     </section>
 <!--Values-->
     <section class="values">
-        <h2>Наши ценности</h2>
+        <div class="container">
+            <h2 class="visually-hidden">Наши ценности</h2>
         <ul class="values-list list">
-            <li>
+            <li class="item">
                 <h3 class="values-list-title">Внимание к деталям</h3>
                 <p class="values-list-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li>
+            <li class="item">
                 <h3 class="values-list-title">Пунктуальность</h3>
                 <p class="values-list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li>
+            <li class="item">
                 <h3 class="values-list-title">Планирование</h3>
                 <p class="values-list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>                
             </li>
-            <li>
+            <li class="item">
                 <h3 class="values-list-title">Современные технологии</h3>
                 <p class="values-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>                
             </li>
         </ul>
+        </div>
     </section>
 <!-- Activity -->
     <section >
