--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </section>
 <!--Values-->
-    <section class="values">
+    <section class="values section">
         <div class="container">
             <h2 class="visually-hidden">Наши ценности</h2>
         <ul class="values-list list">
@@ -62,57 +62,63 @@
         </div>
     </section>
 <!-- Activity -->
-    <section >
-        <h2 class="section-title">Чем мы занимаемся </h2>
-        <ul class="list">
-            <li>
-                <img src="./images/what_we_do1.jpg" alt="Человек наберает код" width="370">
+    <section class="activity section">
+        <div class="container">
+            <h2 class="section-title">Чем мы занимаемся </h2>
+        <ul class="activity-list list">
+            <li class="item">
+                <img  class="image" src="./images/what_we_do1.jpg" alt="Человек наберает код" width="370">
             </li>
-            <li>
-                <img src="./images/what_we_do2.jpg" alt="Человек выбирает дизайн сайта для мобильного устройства" width="370">
+            <li class="item">
+                <img class="image" src="./images/what_we_do2.jpg" alt="Человек выбирает дизайн сайта для мобильного устройства" width="370">
             </li>
-            <li>
-                <img src="./images/what_we_do3.jpg" alt="Человек выбирает цвет из палитры на планшете" width="370">
+            <li class="item">
+                <img class="image" src="./images/what_we_do3.jpg" alt="Человек выбирает цвет из палитры на планшете" width="370">
             </li>
         </ul>
+        </div>
     </section>
 <!-- Team -->
-    <section class="team"> 
-        <h2 class="section-title">Наша команда</h2>
+    <section class="team section"> 
+        <div class="container">
+            <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
             <li class="team-list-item">
-                <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270">
+                <img class="team-list-item-image" src="./images/team1.jpg" alt="Игорь Демьяненко" width="270">
                 <h3 class="team-list-item-title">Игорь Демьяненко</h3>
                 <p class="team-list-item-text" lang="en" >Product Designer</p>
             </li>
             <li class="team-list-item">
-                <img src="./images/team4.jpg" alt="Ольга Репина" width="270">
+                <img class="team-list-item-image" src="./images/team4.jpg" alt="Ольга Репина" width="270">
                 <h3 class="team-list-item-title">Ольга Репина</h3>
                 <p class="team-list-item-text" lang="en">Frontend Developer</p>
             </li>
             <li class="team-list-item">
-                <img src="./images/team3.jpg" alt="Николай Тарасов" width="270">
+                <img class="team-list-item-image" src="./images/team3.jpg" alt="Николай Тарасов" width="270">
                 <h3 class="team-list-item-title">Николай Тарасов</h3>
                 <p class="team-list-item-text" lang="en">Marketing</p>
             </li>
             <li class="team-list-item">
-                <img src="./images/team2.jpg" alt="Михаил Ермаков" width="270">
+                <img class="team-list-item-image" src="./images/team2.jpg" alt="Михаил Ермаков" width="270">
                 <h3 class="team-list-item-title">Михаил Ермаков</h3>
                 <p class="team-list-item-text" lang="en">UI Designer</p>
             </li>
         </ul>
+        </div>
     </section>
     </main>
 <!-- Footer -->
     <footer class="footer">
-        <a class="logo link" href="./index.html" ><span class="logo-accent">Web</span>Studio</a>
+        <div class="container">
+            <a class="logo link" href="./index.html" ><span class="logo-accent">Web</span>Studio</a>
         <address class="contact-information">
             <ul class="contact-information-list list">
-                <li><a class="contact-information-list-link address link" href="https://goo.gl/maps/SBPvkcsHBhy8aDbb7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a class="contact-information-list-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
-                <li><a class="contact-information-list-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
+                <li class="item"><a class="contact-information-list-link address link" href="https://goo.gl/maps/SBPvkcsHBhy8aDbb7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="item"><a class="contact-information-list-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
+                <li class="item"><a class="contact-information-list-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
