--- a/portfolio.html
+++ b/portfolio.html
@@ -12,91 +12,97 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <nav class="nav">
-            <a class="logo link" href="./index.html" ><span class="logo-accent">Web</span>Studio</a>
-            <ul class="navigation-list list">
-                <li><a class="navigation-list-link link" href="./index.html" >Студия</a></li>
-                <li><a class="navigation-list-link link current" href="./portfolio.html" >Портфолио</a></li>
-                <li><a class="navigation-list-link link" href="#" >Контакты</a></li>
+    <header class="page-header">
+        <div class="container">
+            <nav class="navigation">
+                <a class="logo link" href="./index.html" ><span class="logo-accent">Web</span>Studio</a>
+                <ul class="navigation-list list">
+                    <li class="item"><a class="navigation-list-link link" href="./index.html" >Студия</a></li>
+                    <li class="item"><a class="navigation-list-link link current" href="./portfolio.html" >Портфолио</a></li>
+                    <li class="item"><a class="navigation-list-link link" href="#" >Контакты</a></li>
+                </ul>
+                
+            </nav>
+            <ul class="contacts-list list">
+                <li class="item"><a class="contacts-list-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
+                <li class="item"><a class="contacts-list-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
             </ul>
-            
-        </nav>
-        <ul class="contacts-list list">
-            <li><a class="contacts-list-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
-            <li><a class="contacts-list-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main>
         <!-- Portfolio -->
-        <h1>Портфолио</h1>
-        <section>
-        <ul class="fiter-list list">
-            <li><button class="filter-button" type="button">Все</button></li>
-            <li><button class="filter-button" type="button">Веб-сайты</button></li>
-            <li><button class="filter-button" type="button">Приложения</button></li>
-            <li><button class="filter-button" type="button">Дизайн</button></li>
-            <li><button class="filter-button" type="button">Маркетинг</button></li>
-        </ul>
-        <ul class="examples-list list">
-               <li class="examples-list-item">
-                   <img src="./images/portfolio/tehno.jpg" alt="Экран ноутбука" width="370">
-                   <h2 class="examples-list-item-title">Технокряк</h2>
-                   <p class="examples-list-item-text">Веб-сайт</p>
-               </li>
-               <li class="examples-list-item">
-                   <img src="./images/portfolio/poster.jpg" alt="ДВа баскетболиста" width="370">
-                   <h2 class="examples-list-item-title">Постер New Orlean vs Golden Star</h2>
-                   <p class="examples-list-item-text">Дизайн</p>
-               </li>
-               <li class="examples-list-item">
-                <img src="./images/portfolio/seafood.jpg" alt="Логотип ресторана" width="370">
-                <h2 class="examples-list-item-title">Ресторан Seafood</h2>
-                <p class="examples-list-item-text">Приложение</p>
-               </li>
-               <li class="examples-list-item">
-                <img src="./images/portfolio/prime.jpg" alt="Наушники" width="370">
-                <h2 class="examples-list-item-title">Проект Prime</h2>
-                <p class="examples-list-item-text">Маркетинг</p>
-               </li>
-               <li class="examples-list-item">
-                <img src="./images/portfolio/boxes.jpg" alt="Две кробки" width="370">
-                <h2 class="examples-list-item-title">Проект Boxes</h2>
-                <p class="examples-list-item-text">Приложение</p>
-               </li>
-               <li class="examples-list-item">
-                <img src="./images/portfolio/inspiration.jpg" alt="Монитор компютера" width="370">
-                <h2 class="examples-list-item-title" lang="en">Inspiration has no Borders</h2>
-                <p class="examples-list-item-text">Веб-сайт</p>
-               </li>
-               <li class="examples-list-item">
-                <img src="./images/portfolio/limited.jpg" alt="Открытый журнал" width="370">
-                <h2 class="examples-list-item-title">Издание Limited Edition</h2>
-                <p class="examples-list-item-text">Дизайн</p>
-               </li>
-               <li class="examples-list-item">
-                <img src="./images/portfolio/lab.jpg" alt="Бирка" width="370">
-                <h2 class="examples-list-item-title">Проект LAB</h2>
-                <p class="examples-list-item-text">Маркетинг</p>
-               </li>
-               <li class="examples-list-item">
-                <img src="./images/portfolio/growing.jpg" alt="Человек работает на ноутбуке" width="370">
-                <h2 class="examples-list-item-title" lang="en">Growing Business</h2>
-                <p class="examples-list-item-text">Приложение</p>
-               </li>
-        </ul> 
+        <h1 class="visually-hidden">Портфолио</h1>
+        <section class="section">
+            <div class="container">
+                <ul class="filter-list list">
+                    <li class="item"><button class="filter-button" type="button">Все</button></li>
+                    <li class="item"><button class="filter-button" type="button">Веб-сайты</button></li>
+                    <li class="item"><button class="filter-button" type="button">Приложения</button></li>
+                    <li class="item"><button class="filter-button" type="button">Дизайн</button></li>
+                    <li class="item"><button class="filter-button" type="button">Маркетинг</button></li>
+                </ul>
+                <ul class="examples-list list">
+                       <li class="examples-list-item">
+                           <img  class="examples-list-item-image" src="./images/portfolio/tehno.jpg" alt="Экран ноутбука" width="370">
+                           <h2 class="examples-list-item-title">Технокряк</h2>
+                           <p class="examples-list-item-text">Веб-сайт</p>
+                       </li>
+                       <li class="examples-list-item">
+                           <img class="examples-list-item-image" src="./images/portfolio/poster.jpg" alt="ДВа баскетболиста" width="370">
+                           <h2 class="examples-list-item-title">Постер New Orlean vs Golden Star</h2>
+                           <p class="examples-list-item-text">Дизайн</p>
+                       </li>
+                       <li class="examples-list-item">
+                        <img class="examples-list-item-image" src="./images/portfolio/seafood.jpg" alt="Логотип ресторана" width="370">
+                        <h2 class="examples-list-item-title">Ресторан Seafood</h2>
+                        <p class="examples-list-item-text">Приложение</p>
+                       </li>
+                       <li class="examples-list-item">
+                        <img class="examples-list-item-image" src="./images/portfolio/prime.jpg" alt="Наушники" width="370">
+                        <h2 class="examples-list-item-title">Проект Prime</h2>
+                        <p class="examples-list-item-text">Маркетинг</p>
+                       </li>
+                       <li class="examples-list-item">
+                        <img class="examples-list-item-image" src="./images/portfolio/boxes.jpg" alt="Две кробки" width="370">
+                        <h2 class="examples-list-item-title">Проект Boxes</h2>
+                        <p class="examples-list-item-text">Приложение</p>
+                       </li>
+                       <li class="examples-list-item">
+                        <img class="examples-list-item-image" src="./images/portfolio/inspiration.jpg" alt="Монитор компютера" width="370">
+                        <h2 class="examples-list-item-title" lang="en">Inspiration has no Borders</h2>
+                        <p class="examples-list-item-text">Веб-сайт</p>
+                       </li>
+                       <li class="examples-list-item">
+                        <img class="examples-list-item-image" src="./images/portfolio/limited.jpg" alt="Открытый журнал" width="370">
+                        <h2 class="examples-list-item-title">Издание Limited Edition</h2>
+                        <p class="examples-list-item-text">Дизайн</p>
+                       </li>
+                       <li class="examples-list-item">
+                        <img class="examples-list-item-image" src="./images/portfolio/lab.jpg" alt="Бирка" width="370">
+                        <h2 class="examples-list-item-title">Проект LAB</h2>
+                        <p class="examples-list-item-text">Маркетинг</p>
+                       </li>
+                       <li class="examples-list-item">
+                        <img class="examples-list-item-image" src="./images/portfolio/growing.jpg" alt="Человек работает на ноутбуке" width="370">
+                        <h2 class="examples-list-item-title" lang="en">Growing Business</h2>
+                        <p class="examples-list-item-text">Приложение</p>
+                       </li>
+                </ul> 
+            </div>
         </section>
     </main>
 <!-- Footer -->
 <footer class="footer">
-    <a class="logo link" href="./index.html" ><span class="logo-accent">Web</span>Studio</a>
+    <div class="container">
+        <a class="logo link" href="./index.html" ><span class="logo-accent">Web</span>Studio</a>
     <address class="contact-information">
         <ul class="contact-information-list list">
-            <li><a class="contact-information-list-link address link" href="https://goo.gl/maps/SBPvkcsHBhy8aDbb7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a class="contact-information-list-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
-            <li><a class="contact-information-list-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
+            <li class="item"><a class="contact-information-list-link address link" href="https://goo.gl/maps/SBPvkcsHBhy8aDbb7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li class="item"><a class="contact-information-list-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
+            <li class="item"><a class="contact-information-list-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
         </ul>
     </address>
+    </div>
 </footer>
 </body>
 </html>
