--- a/index.html
+++ b/index.html
@@ -85,23 +85,31 @@
         <ul class="team-list list">
             <li class="team-list-item">
                 <img class="team-list-item-image" src="./images/team1.jpg" alt="Игорь Демьяненко" width="270">
-                <h3 class="team-list-item-title">Игорь Демьяненко</h3>
-                <p class="team-list-item-text" lang="en" >Product Designer</p>
+                <div class="text-content">
+                    <h3 class="team-list-item-title">Игорь Демьяненко</h3>
+                    <p class="team-list-item-text" lang="en" >Product Designer</p>
+                </div> 
             </li>
             <li class="team-list-item">
                 <img class="team-list-item-image" src="./images/team4.jpg" alt="Ольга Репина" width="270">
-                <h3 class="team-list-item-title">Ольга Репина</h3>
-                <p class="team-list-item-text" lang="en">Frontend Developer</p>
+                <div class="text-content">
+                    <h3 class="team-list-item-title">Ольга Репина</h3>
+                    <p class="team-list-item-text" lang="en">Frontend Developer</p>
+                </div>   
             </li>
             <li class="team-list-item">
                 <img class="team-list-item-image" src="./images/team3.jpg" alt="Николай Тарасов" width="270">
-                <h3 class="team-list-item-title">Николай Тарасов</h3>
-                <p class="team-list-item-text" lang="en">Marketing</p>
+                <div class="text-content">
+                    <h3 class="team-list-item-title">Николай Тарасов</h3>
+                    <p class="team-list-item-text" lang="en">Marketing</p>
+                </div> 
             </li>
             <li class="team-list-item">
                 <img class="team-list-item-image" src="./images/team2.jpg" alt="Михаил Ермаков" width="270">
-                <h3 class="team-list-item-title">Михаил Ермаков</h3>
-                <p class="team-list-item-text" lang="en">UI Designer</p>
+                <div class="text-content">
+                    <h3 class="team-list-item-title">Михаил Ермаков</h3>
+                    <p class="team-list-item-text" lang="en">UI Designer</p>
+                </div>
             </li>
         </ul>
         </div>
