--- a/portfolio.html
+++ b/portfolio.html
@@ -44,48 +44,69 @@
                 <ul class="examples-list list">
                        <li class="examples-list-item">
                            <img  class="examples-list-item-image" src="./images/portfolio/tehno.jpg" alt="Экран ноутбука" width="370">
+                           <div class="text-content">
+                            <h2 class="examples-list-item-title">Технокряк</h2>
+                            <p class="examples-list-item-text">Веб-сайт</p>
+                           </div>
                            <h2 class="examples-list-item-title">Технокряк</h2>
                            <p class="examples-list-item-text">Веб-сайт</p>
                        </li>
                        <li class="examples-list-item">
                            <img class="examples-list-item-image" src="./images/portfolio/poster.jpg" alt="ДВа баскетболиста" width="370">
-                           <h2 class="examples-list-item-title">Постер New Orlean vs Golden Star</h2>
-                           <p class="examples-list-item-text">Дизайн</p>
+                           <div class="text-content">
+                            <h2 class="examples-list-item-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="examples-list-item-text">Дизайн</p>    
+                        </div>
+                           
                        </li>
                        <li class="examples-list-item">
                         <img class="examples-list-item-image" src="./images/portfolio/seafood.jpg" alt="Логотип ресторана" width="370">
-                        <h2 class="examples-list-item-title">Ресторан Seafood</h2>
-                        <p class="examples-list-item-text">Приложение</p>
+                        <div class="text-content">
+                            <h2 class="examples-list-item-title">Ресторан Seafood</h2>
+                            <p class="examples-list-item-text">Приложение</p>    
+                        </div>
                        </li>
                        <li class="examples-list-item">
                         <img class="examples-list-item-image" src="./images/portfolio/prime.jpg" alt="Наушники" width="370">
-                        <h2 class="examples-list-item-title">Проект Prime</h2>
-                        <p class="examples-list-item-text">Маркетинг</p>
+                        <div class="text-content">
+                            <h2 class="examples-list-item-title">Проект Prime</h2>
+                            <p class="examples-list-item-text">Маркетинг</p> 
+                        </div>
                        </li>
                        <li class="examples-list-item">
                         <img class="examples-list-item-image" src="./images/portfolio/boxes.jpg" alt="Две кробки" width="370">
-                        <h2 class="examples-list-item-title">Проект Boxes</h2>
-                        <p class="examples-list-item-text">Приложение</p>
+                        <div class="text-content">
+                            <h2 class="examples-list-item-title">Проект Boxes</h2>
+                            <p class="examples-list-item-text">Приложение</p>    
+                        </div>
                        </li>
                        <li class="examples-list-item">
                         <img class="examples-list-item-image" src="./images/portfolio/inspiration.jpg" alt="Монитор компютера" width="370">
-                        <h2 class="examples-list-item-title" lang="en">Inspiration has no Borders</h2>
-                        <p class="examples-list-item-text">Веб-сайт</p>
+                        <div class="text-content">
+                            <h2 class="examples-list-item-title" lang="en">Inspiration has no Borders</h2>
+                            <p class="examples-list-item-text">Веб-сайт</p>  
+                        </div>
                        </li>
                        <li class="examples-list-item">
                         <img class="examples-list-item-image" src="./images/portfolio/limited.jpg" alt="Открытый журнал" width="370">
-                        <h2 class="examples-list-item-title">Издание Limited Edition</h2>
-                        <p class="examples-list-item-text">Дизайн</p>
+                        <div class="text-content">
+                            <h2 class="examples-list-item-title">Издание Limited Edition</h2>
+                            <p class="examples-list-item-text">Дизайн</p>    
+                        </div>
                        </li>
                        <li class="examples-list-item">
                         <img class="examples-list-item-image" src="./images/portfolio/lab.jpg" alt="Бирка" width="370">
-                        <h2 class="examples-list-item-title">Проект LAB</h2>
-                        <p class="examples-list-item-text">Маркетинг</p>
+                        <div class="text-content">
+                            <h2 class="examples-list-item-title">Проект LAB</h2>
+                            <p class="examples-list-item-text">Маркетинг</p>    
+                        </div>
                        </li>
                        <li class="examples-list-item">
                         <img class="examples-list-item-image" src="./images/portfolio/growing.jpg" alt="Человек работает на ноутбуке" width="370">
-                        <h2 class="examples-list-item-title" lang="en">Growing Business</h2>
-                        <p class="examples-list-item-text">Приложение</p>
+                        <div class="text-content">
+                            <h2 class="examples-list-item-title" lang="en">Growing Business</h2>
+                            <p class="examples-list-item-text">Приложение</p>  
+                        </div>
                        </li>
                 </ul> 
             </div>
